; ModuleID = '/home/carl/AnghaBench/linux/drivers/thunderbolt/extr_xdomain.c_tb_xdomain_copy.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/thunderbolt/extr_xdomain.c_tb_xdomain_copy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tb_cfg_request = type { %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i64 }
%struct.ctl_pkg = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tb_cfg_request*, %struct.ctl_pkg*)* @tb_xdomain_copy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tb_xdomain_copy(%struct.tb_cfg_request* %0, %struct.ctl_pkg* %1) #0 {
  %3 = alloca %struct.tb_cfg_request*, align 8
  %4 = alloca %struct.ctl_pkg*, align 8
  store %struct.tb_cfg_request* %0, %struct.tb_cfg_request** %3, align 8
  store %struct.ctl_pkg* %1, %struct.ctl_pkg** %4, align 8
  %5 = load %struct.tb_cfg_request*, %struct.tb_cfg_request** %3, align 8
  %6 = getelementptr inbounds %struct.tb_cfg_request, %struct.tb_cfg_request* %5, i32 0, i32 2
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.ctl_pkg*, %struct.ctl_pkg** %4, align 8
  %9 = getelementptr inbounds %struct.ctl_pkg, %struct.ctl_pkg* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.tb_cfg_request*, %struct.tb_cfg_request** %3, align 8
  %12 = getelementptr inbounds %struct.tb_cfg_request, %struct.tb_cfg_request* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @memcpy(i32 %7, i32 %10, i32 %13)
  %15 = load %struct.tb_cfg_request*, %struct.tb_cfg_request** %3, align 8
  %16 = getelementptr inbounds %struct.tb_cfg_request, %struct.tb_cfg_request* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  store i64 0, i64* %17, align 8
  ret i32 1
}

declare dso_local i32 @memcpy(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
